# spike-prime-code

./: .gitignore  .gitmodules  MCPV_1_31.py  Makefile  Otto.io  README.md  backup_30-01-23.py  battery.py  batteryshow.py  boot-experiment.py  clean1.py  clock.py  communicate.py  gsgapi.py  gsgex.py  hypernumbers.py  main.py  make.bat  mcp.py  mcpv_1_31_dec.py  pyproject.toml  ruff.toml  spielzeug_ctrl.py  spike_prime_compyne.py  task.py  test.py  upload_runtime.py  zeug.py
docs/: conf.py  driving-and-turning.rst  index.rst  structure.rst
docs-src/: conf.py  getting-started.rst  index.rst
docs-src/api/: index.rst
docs/api/: index.rst
docs/how-to/: beginners-guide.rst  connect-hub.rst  index.rst  setup-devenv.rst
docs/knowledge/: attachments.rst  beginners-guide.rst  config.rst  creating-a-run.rst  debug-mode.rst  driving-and-turning.rst  getting-started.rst  index.rst  known-issues.rst  setup-devenv.rst
docs/special-features/: emergency-recovery.rst  index.rst  interrupting-boot.rst
docs/typical-issues/: hardware.rst  index.rst
docs/usage/: index.rst
forschung/: __init__.py
games/: c3po_sensor.py  calculator.py  chain_tests.py  clean1.py  cleaning.py  clock.py  color_tracking copy 2.py  color_tracking copy.py  color_tracking.py  gamemenu.py  guessthenumber.py  howmany.py  keine_ahnung.py  memory.py  nielpferd.py  number.py  reaction.py  rollthedice.py  sinkingships.py  spike_invator.py  spikedash.py  test.py  tictactoe.py  tictactoe2.py  trampoline.py  waahlrooßen.py
gsg/: condition.py  config.py
gsgr/: __init__.py  _condition_base.py  _config_base.py  conditions.py  configuration.py  correctors.py  exceptions.py  run.py  utils.py
hub/: __init__.py  battery.py  display.py
old/: packets.md  spielzeug.py  spike2compat.py
osrc/: __init__.py  config.yaml
osrc/gsgr/: config.py  exceptions.py  movement.pyi  run.py
osrc/runs/: run_1.py  run_3.py
runs/: run_1.py
source/: conf.py  gsgr.conditions.rst  gsgr.configuration.rst  gsgr.correctors.rst  gsgr.rst  index.rst
source/api/: gsgr.conditions.rst  gsgr.configuration.rst  gsgr.correctors.rst  gsgr.display.rst  gsgr.enums.rst  gsgr.exceptions.rst  gsgr.math.rst  gsgr.menu.rst  gsgr.movement.rst  gsgr.rst  gsgr.run.rst  gsgr.utils.rst  index.rst
spielzeug/: bleio.py  boot.py  custom_runtime.py  main.py  server.py  spielzeug.py  spielzeug_lib.py  test.py  version.py
spielzeug/spzglib/: bleio.py  identify.py  server.py  version.py
spielzeug/src/: config.json
spike/: __init__.py  control.py  operator.py
src/: __init__.py  battery.py  config.yaml  gsgex.py  main.cpyd.mpy  main.py  mcp.py  micropython.pyi  smile.py
src/compyned_polyfills/: LICENSE  abc.py  enum.py  typing.py
src/games/: battery.py  c3po_sensor.py  color_tracking copy.py  gamemenu.py  howmany.py  keine_ahnung.py  memory.py  nielpferd.py  reaction.py  sinkingships.py  spike_invator.py  test.py  tictactoe2.py  trampoline.py  wahlross.py
src/gsgr/: _config.py  _config_base.py  buttons.py  conditions.py  conditions.pyi  config.py  configuration.py  correctors.py  display.py  enums.py  exceptions.py  interpolators.py  math.py  menu.py  movement.py  movement.pyi  run.py  types.py  types.pyi  utils.py
src/hub/: __init__.py  __init__.pyi  battery.py  button.py  button.pyi  display.py  display.pyi  motion.pyi  port.py  port.pyi
src/runs/: run_0 copy.py  run_0.py  run_1.py  run_2.py  (+12 more)
tools/: clock.py  rename_parts.py  sender.py  spike_prime_compyne.py  spikeapi.py  upload.py
(+66 files in other folders)
