[project]
name = "competition-programs"
description = "The code OTTWO runs in competitions"
version = "0.1.0"
readme = "README.md"
authors = [
    { name = "FINNtastisch" },
    { name = "Meganton" },
    { name = "JoJoJux" },
    { name = "GSG-Robots" },
]
requires-python = '>=3.13.1,<3.14'
dependencies = [
    'pyyaml (>=6.0.2,<7.0.0)',
    'pyserial (>=3.5,<4.0)',
    'watchdog (>=6.0.0,<7.0.0)',
    'bleak (>=1.1.0,<2.0.0)',
    'mpy-cross (>=1.26.1.post2,<2.0.0)',
    "tqdm>=4.67.1",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
docs = [
    "sphinx (>=8.2.3,<9.0.0)",
    "sphinx-rtd-theme (>=3.0.2,<4.0.0)",
    "sphinx-toolbox (>=4.0.0,<5.0.0)",
    "sphinx-autodoc-typehints (>=3.5.1,<4.0.0)",
    "sphinx-intl (>=2.3.2,<3.0.0)",
    "chardet (>=5.2.0,<6.0.0)",
    "sphinx-autobuild (>=2025.8.25,<2026.0.0)",
    "sphinx-notfound-page (>=1.1.0,<2.0.0)",
]
dev = ["ruff (>=0.14.0,<0.15.0)", "isort (>=7.0.0,<8.0.0)"]

[tool.poetry]
packages = [{ include = "*", from = "src" }]
package-mode = false

[tool.uv]
package = false

[tool.isort]
line_length = 120

[tool.ruff]
line-length = 120
indent-width = 4
extend-exclude = ["games/**/*.py"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "W",
    "I",
    "B",
    "FIX",
    "COM",
    "PIE",
    "Q",
    "RSE",
    "RET",
    "SIM",
    "FLY",
    "PERF",
]

[tool.basedpyright]
stubPath = "submodules/spike3/stubfiles"
